# aichat

./: Cargo.toml  README.md  README_zh-CN.md
src/: ai_models.rs  app.rs  events.rs  i18n.rs  main.rs  ui.rs
src/ai/: aliyun.rs  deepseek.rs  mod.rs
