[package]
name = "aichat"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.27"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
futures = "0.3.31"
